--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -298,7 +298,73 @@ body {
 }
 
 #map {
-    width: 50%;
-    height: 180px;
+    width: 100%;
+    height: 200px;
     margin-top: 10px;
+}
+
+.inline-list {
+    width: 100%;
+}
+
+.restaurant-item {
+    height: 130px;
+    padding: 0px;
+    padding-right: 10px;
+}
+
+.restaurant-container {
+    background-color: #128ff2;
+    width: 100%;
+    height: 130px;
+    margin-top: 0;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.restaurant-container img {
+    background-position: 50% 30%;
+    height: 130px;
+    width: 100%;
+    object-fit:cover;
+    border-radius: 3px;
+    display: block !important;
+}
+
+.restaurant-container .information {
+    padding-left: 10px;
+    color: white;
+    bottom: 0;
+    background: linear-gradient(to bottom,rgba(255,255,255,0.0),rgba(0,0,0,0.5));
+    position: relative;
+    -webkit-transform: translateY(-100%);
+    -moz-transform: translateY(-100%);
+    transform: translateY(-100%);
+    padding-bottom: 8px;
+}
+
+.restaurant-container .information h3 {
+    background: #000;
+    border: 1px solid #000;
+    border-left: 0px;
+    box-shadow: 4px 0 0 #000, -4px 0 0 #000;
+    max-width: 92.5%;
+    letter-spacing: 0.2px;
+    font-weight: 400;
+    font-size: 14px;
+    display: inline;
+}
+
+.restaurant-container .information h4 {
+    font-weight: 300;
+    font-size: 12px;
+    margin-top: 4px;
+    max-width: 92.5%;
+}
+
+.slide {
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-bottom: 35px !important;
+    margin-top: 20px;
 }
