--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -38,3 +38,58 @@ button {
     font-family: -apple-system,helvetica,arial,sans-serif;
     font-weight: 300;
 }
+
+.spinner {
+    width: 70px;
+    text-align: center;
+    float: left;
+    border-radius: 0 15px 15px 15px;
+    padding: 5px 0px;
+    background-color: white;
+    box-shadow: rgba(0,0,0,0.2) 0 1px 3px 0;
+}
+
+.spinner > div {
+    width: 8px;
+    height: 8px;
+    margin-left: 3px;
+    background-color: #c7ccc8;
+
+    border-radius: 100%;
+    display: inline-block;
+    -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+    animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+}
+
+h3 {
+    margin: 0px;
+}
+
+h4 {
+    margin: 0px;
+}
+
+.spinner .bounce1 {
+    -webkit-animation-delay: -0.32s;
+    animation-delay: -0.32s;
+}
+
+.spinner .bounce2 {
+    -webkit-animation-delay: -0.16s;
+    animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+    0%, 80%, 100% { -webkit-transform: scale(0) }
+    40% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes sk-bouncedelay {
+    0%, 80%, 100% {
+        -webkit-transform: scale(0);
+        transform: scale(0);
+    } 40% {
+          -webkit-transform: scale(1.0);
+          transform: scale(1.0);
+      }
+}
